--- a/TMessagesProj/src/main/AndroidManifest.xml
+++ b/TMessagesProj/src/main/AndroidManifest.xml
@@ -131,12 +131,12 @@
             android:windowSoftInputMode="adjustResize|stateHidden">
         </activity>
         <activity
-            android:name="org.telegram.techrunch.SelectCity"
+            android:name="org.telegram.techrunch.select_city.SelectCity"
             android:excludeFromRecents="true"
             android:taskAffinity=""
-            android:theme="@style/Theme.TMessages.Start"
-            android:parentActivityName="org.telegram.ui.LaunchActivity"
-            android:windowSoftInputMode="adjustResize|stateHidden">
+            android:theme="@style/SelectCityTheme"
+            android:windowSoftInputMode="adjustPan|adjustResize"
+            android:parentActivityName="org.telegram.ui.LaunchActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="org.telegram.ui.LaunchActivity" />
